# MagicCamera

./: README.md
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
magicfilter/: CMakeLists.txt  build.gradle
